migrate jfuse-win-amd64 to java 19