@@ -3,9 +3,10 @@ package org.cryptomator.jfuse.win.amd64;
 import org.cryptomator.jfuse.api.Stat;
 import org.cryptomator.jfuse.api.TimeSpec;
 import org.cryptomator.jfuse.win.amd64.extr.fuse_stat;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 record StatImpl(MemorySegment segment) implements Stat {
 
@@ -23,7 +24,7 @@ record StatImpl(MemorySegment segment) implements Stat {
 	@SuppressWarnings("OctalInteger")
 	private static final int S_IFLNK = 0120000;
 
-	public StatImpl(MemoryAddress address, ResourceScope scope) {
+	public StatImpl(MemoryAddress address, MemorySession scope) {
 		this(fuse_stat.ofAddress(address, scope));
 	}
 
